--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Habit_Tracker
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/pet
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
